--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "Rotten Tomatoes movie crawler with TypeScript",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "dev": "tsx src/server.ts",
     "test": "jest"
   },
   "keywords": [],
@@ -19,7 +20,9 @@
     "cors": "^2.8.5",
     "d3": "^7.9.0",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "fs": "^0.0.1-security",
+    "jsdom": "^26.0.0"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.35",
@@ -27,11 +30,12 @@
     "@types/d3": "^7.4.3",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^22.13.5",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "ts-jest": "^29.2.5",
-    "ts-node-dev": "^2.0.0",
+    "tsx": "^4.19.3",
     "typescript": "^5.7.3"
   }
 }
