--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,15 @@
 {
   "compilerOptions": {
     "target": "es2017",
-    "module": "commonjs",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "esModuleInterop": true,
     "lib": ["es6"],
     "allowJs": true,
     "outDir": "dist",
     "rootDir": ".",
     "strict": true,
     "noImplicitAny": true,
-    "esModuleInterop": true,
     "resolveJsonModule": true,
     "types": ["node"],
     "typeRoots": ["./node_modules/@types", "./src/@types"]
